--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -923,6 +923,22 @@
                                     <action selector="didClick:" destination="lgZ-vp-vZD" eventType="touchUpInside" id="UsY-Gl-f9u"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WuA-Wl-j9P">
+                                <rect key="frame" x="352" y="20" width="25" height="25"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="1IQ-wb-l20"/>
+                                    <constraint firstAttribute="width" constant="25" id="BrO-Tc-d6e"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="star">
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickFav:" destination="lgZ-vp-vZD" eventType="touchUpInside" id="6aD-wJ-ubT"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Rq7-th-1iH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -956,8 +972,10 @@
                             <constraint firstItem="oeW-Ob-d0u" firstAttribute="top" secondItem="Ome-aY-r6e" secondAttribute="bottom" constant="10.000000000000028" id="Vd2-0Z-0DI"/>
                             <constraint firstItem="rRa-6w-Ngk" firstAttribute="top" secondItem="WsV-Ie-0eX" secondAttribute="bottom" constant="10" id="WUc-dp-VVr"/>
                             <constraint firstItem="RUn-HA-qwg" firstAttribute="top" secondItem="KGe-JO-Air" secondAttribute="bottom" constant="8" symbolic="YES" id="WWA-V5-CrX"/>
+                            <constraint firstItem="Rq7-th-1iH" firstAttribute="trailing" secondItem="WuA-Wl-j9P" secondAttribute="trailing" constant="16" id="YtR-BS-NOb"/>
                             <constraint firstItem="maU-nG-kv0" firstAttribute="centerY" secondItem="KGe-JO-Air" secondAttribute="centerY" id="ZZT-et-rRk"/>
                             <constraint firstItem="AwZ-5T-BQQ" firstAttribute="top" secondItem="oeW-Ob-d0u" secondAttribute="bottom" constant="10.000000000000057" id="ZcB-3H-Wyu"/>
+                            <constraint firstItem="WuA-Wl-j9P" firstAttribute="top" secondItem="Rq7-th-1iH" secondAttribute="top" constant="20" id="a51-er-6kz"/>
                             <constraint firstItem="WsV-Ie-0eX" firstAttribute="leading" secondItem="Rq7-th-1iH" secondAttribute="leading" constant="16" id="aBI-JF-Z85"/>
                             <constraint firstItem="bn2-N2-AyB" firstAttribute="top" secondItem="KGe-JO-Air" secondAttribute="bottom" constant="8" id="bNi-2p-zS1"/>
                             <constraint firstItem="maU-nG-kv0" firstAttribute="leading" secondItem="KGe-JO-Air" secondAttribute="trailing" constant="5" id="c2T-fN-eca"/>
@@ -985,6 +1003,7 @@
                         <outlet property="bookImg" destination="BqQ-RH-DeQ" id="V7i-RQ-krQ"/>
                         <outlet property="descrBook" destination="I3H-Y0-UCq" id="ahd-2U-R1Q"/>
                         <outlet property="durationBook" destination="MKR-gU-dVx" id="aE8-zP-jeY"/>
+                        <outlet property="favBtn" destination="WuA-Wl-j9P" id="p1U-Go-cg8"/>
                         <outlet property="genreBook" destination="oeW-Ob-d0u" id="Kxg-p1-xi2"/>
                         <outlet property="languageBook" destination="RUn-HA-qwg" id="Q1W-pp-zKb"/>
                         <outlet property="numSectionsBook" destination="maU-nG-kv0" id="69a-Vl-Hvw"/>
@@ -1233,6 +1252,7 @@ asdadnasd</string>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="play" width="512" height="512"/>
         <image name="play-button" width="512" height="512"/>
+        <image name="star" width="512" height="512"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <image name="wiki" width="512" height="512"/>
         <namedColor name="Lighter Blue Tone">
