--- a/LibriVox/StoryBoard/Library.storyboard
+++ b/LibriVox/StoryBoard/Library.storyboard
@@ -258,24 +258,24 @@
             </objects>
             <point key="canvasLocation" x="1911" y="586"/>
         </scene>
-        <!--Table View Controller-->
+        <!--FavoritesVC-->
         <scene sceneID="e1T-7l-2CY">
             <objects>
-                <tableViewController storyboardIdentifier="ToStartVC" modalTransitionStyle="flipHorizontal" id="NUo-Ud-Q3n" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="jRz-Ic-JBy">
+                <tableViewController storyboardIdentifier="ToStartVC" modalTransitionStyle="flipHorizontal" id="NUo-Ud-Q3n" customClass="FavoritesVC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="125" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="jRz-Ic-JBy">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="123" id="w6k-aj-Hfz">
-                                <rect key="frame" x="0.0" y="50" width="393" height="123"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavoritesCellTVC" rowHeight="125" id="w6k-aj-Hfz" customClass="FavoritesCellTVC" customModule="LibriVox" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="125"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w6k-aj-Hfz" id="soE-xL-Jjf">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="123"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="125"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O1I-E8-xzJ" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="77" height="123"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="77" height="125"/>
                                             <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="77" id="bfx-C4-03f"/>
@@ -288,26 +288,26 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration: 08:40:31" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Uz-sa-4Mv">
-                                            <rect key="frame" x="87" y="70" width="107" height="18"/>
+                                            <rect key="frame" x="87" y="72" width="107" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre: Action, Adventure" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iib-PH-hrF">
-                                            <rect key="frame" x="87" y="90" width="142" height="18"/>
+                                            <rect key="frame" x="87" y="92" width="142" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play" translatesAutoresizingMaskIntoConstraints="NO" id="5Lf-Ln-QkG">
-                                            <rect key="frame" x="358" y="78" width="35" height="35"/>
+                                            <rect key="frame" x="358" y="80" width="35" height="35"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="35" id="TTq-kY-7cQ"/>
                                                 <constraint firstAttribute="width" constant="35" id="o3j-uj-EZZ"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author: Rick Riordan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvR-S9-KMM">
-                                            <rect key="frame" x="87" y="50" width="115.33333333333331" height="18"/>
+                                            <rect key="frame" x="87" y="52" width="115.33333333333331" height="18"/>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -342,12 +342,18 @@
                                         <constraint firstAttribute="bottom" secondItem="5Lf-Ln-QkG" secondAttribute="bottom" constant="10" id="zjP-cc-0NI"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="authorBook" destination="xvR-S9-KMM" id="0RD-Xh-9me"/>
+                                    <outlet property="durationBook" destination="0Uz-sa-4Mv" id="og4-8N-AQg"/>
+                                    <outlet property="genreBook" destination="iib-PH-hrF" id="joZ-MY-MOg"/>
+                                    <outlet property="titleBook" destination="oHD-S1-uK2" id="ZC2-4c-P2e"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="1Nz-93-vwu">
-                                <rect key="frame" x="0.0" y="173" width="393" height="43.666667938232422"/>
+                                <rect key="frame" x="0.0" y="175" width="393" height="125"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Nz-93-vwu" id="7Xu-1o-l8v">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="125"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -362,25 +368,25 @@
             </objects>
             <point key="canvasLocation" x="3292.3664122137402" y="-2.1126760563380285"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--FinishedCVC-->
         <scene sceneID="B85-OH-DR4">
             <objects>
-                <collectionViewController storyboardIdentifier="FinishedVC" id="cOL-DZ-uvv" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="FinishedVC" id="cOL-DZ-uvv" customClass="FinishedCVC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Np4-FT-F0Y">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemTealColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ojX-jy-gqF">
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="14" minimumInteritemSpacing="20" id="AGu-rb-YiC">
                             <size key="itemSize" width="156" height="236"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="yxS-ob-AFY">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ListBooksCell" id="yxS-ob-AFY" customClass="ListBooksCell" customModule="LibriVox" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="156" height="236"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ybo-e4-aTP">
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="F3g-po-Wkq">
                                     <rect key="frame" x="0.0" y="0.0" width="156" height="236"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
@@ -402,6 +408,9 @@
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percy Jackson: Visitou Morpheus" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DBd-US-yq9">
                                             <rect key="frame" x="0.0" y="193" width="156" height="43"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="156" id="dsN-fR-Gk5"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -411,22 +420,18 @@
                                         <constraint firstItem="96F-Gt-DxQ" firstAttribute="centerX" secondItem="DBd-US-yq9" secondAttribute="centerX" id="13A-Vi-vio"/>
                                         <constraint firstAttribute="bottom" secondItem="DBd-US-yq9" secondAttribute="bottom" id="6QW-gz-CoZ"/>
                                         <constraint firstItem="DBd-US-yq9" firstAttribute="top" secondItem="96F-Gt-DxQ" secondAttribute="bottom" constant="11" id="Cdj-cg-3w4"/>
-                                        <constraint firstItem="aQX-Uc-8Wz" firstAttribute="top" secondItem="Ybo-e4-aTP" secondAttribute="topMargin" id="WLG-Cm-55q"/>
+                                        <constraint firstItem="aQX-Uc-8Wz" firstAttribute="top" secondItem="F3g-po-Wkq" secondAttribute="topMargin" id="WLG-Cm-55q"/>
                                         <constraint firstAttribute="trailing" secondItem="DBd-US-yq9" secondAttribute="trailing" id="fHt-xb-nPc"/>
-                                        <constraint firstItem="96F-Gt-DxQ" firstAttribute="top" secondItem="Ybo-e4-aTP" secondAttribute="top" constant="10" id="hIa-CC-7pg"/>
+                                        <constraint firstItem="96F-Gt-DxQ" firstAttribute="top" secondItem="F3g-po-Wkq" secondAttribute="top" constant="10" id="hIa-CC-7pg"/>
                                         <constraint firstAttribute="trailing" secondItem="aQX-Uc-8Wz" secondAttribute="trailing" constant="14" id="kiF-8i-LqE"/>
-                                        <constraint firstItem="DBd-US-yq9" firstAttribute="leading" secondItem="Ybo-e4-aTP" secondAttribute="leading" id="qHR-dT-jpd"/>
+                                        <constraint firstItem="DBd-US-yq9" firstAttribute="leading" secondItem="F3g-po-Wkq" secondAttribute="leading" id="qHR-dT-jpd"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="156" height="236"/>
-                            </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9Pb-fO-Rjq">
-                                <rect key="frame" x="237" y="0.0" width="156" height="236"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="AUH-og-FwH">
-                                    <rect key="frame" x="0.0" y="0.0" width="156" height="236"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="imageBook" destination="96F-Gt-DxQ" id="t9W-xg-8zI"/>
+                                    <outlet property="titleBook" destination="DBd-US-yq9" id="bVn-t8-JYp"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -478,9 +483,6 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
