--- a/LibriVox/StoryBoard/HomePage.storyboard
+++ b/LibriVox/StoryBoard/HomePage.storyboard
@@ -130,82 +130,83 @@
                                     <constraint firstItem="pxx-Kk-uQi" firstAttribute="top" secondItem="z8L-2w-Kh3" secondAttribute="bottom" constant="2" id="zZE-K9-rtG"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" rowHeight="115" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lcC-6f-bEm">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" rowHeight="140" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lcC-6f-bEm">
                                 <rect key="frame" x="16" y="383.33333333333326" width="343" height="329.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="separatorColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="115" id="E03-yn-IXx" customClass="CustomCellBook" customModule="LibriVox" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="343" height="115"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="140" id="E03-yn-IXx" customClass="CustomCellBook" customModule="LibriVox" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="343" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="E03-yn-IXx" id="rkb-Iu-aQd">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="115"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DGH-jY-LHy" customClass="RoundView" customModule="LibriVox" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
+                                                    <rect key="frame" x="0.0" y="10" width="80" height="115"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0UD-Ma-xU9">
-                                                            <rect key="frame" x="4" y="6" width="16" height="21"/>
+                                                            <rect key="frame" x="4" y="6" width="28" height="44"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <fontDescription key="fontDescription" name="Prata-Regular" family="Prata" pointSize="18"/>
+                                                            <fontDescription key="fontDescription" name="Prata-Regular" family="Prata" pointSize="35"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" name="Main Blue Tone"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="35" id="PiZ-Yt-3GD"/>
-                                                        <constraint firstAttribute="width" constant="35" id="YSL-s5-zk1"/>
+                                                        <constraint firstAttribute="width" constant="80" id="Dvf-xS-5iS"/>
                                                     </constraints>
                                                 </view>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hJd-5j-a9E" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
-                                                    <rect key="frame" x="20" y="13" width="65" height="102"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="102" id="IqU-6w-Tnm"/>
-                                                        <constraint firstAttribute="width" constant="65" id="qq4-wA-Lnn"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percy Jackson: The Lightning Thief" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDj-Mh-ldn">
-                                                    <rect key="frame" x="95" y="13.000000000000002" width="248" height="20.666666666666671"/>
+                                                    <rect key="frame" x="120" y="10.000000000000002" width="223" height="20.666666666666671"/>
                                                     <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author: Rick Riordan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8i-j1-jKH">
-                                                    <rect key="frame" x="95" y="57" width="115.33333333333331" height="18"/>
+                                                    <rect key="frame" x="120" y="72" width="115.33333333333331" height="18"/>
                                                     <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre: Drama" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PL-8V-yfx">
-                                                    <rect key="frame" x="95" y="97" width="78.333333333333314" height="18"/>
+                                                    <rect key="frame" x="120" y="112" width="78.333333333333314" height="18"/>
                                                     <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration: 08:40:31" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6H3-k0-uBX">
-                                                    <rect key="frame" x="95" y="77" width="107" height="18"/>
+                                                    <rect key="frame" x="120" y="92" width="107" height="18"/>
                                                     <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hJd-5j-a9E" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
+                                                    <rect key="frame" x="40" y="20" width="70" height="110"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="110" id="IqU-6w-Tnm"/>
+                                                        <constraint firstAttribute="width" constant="70" id="h3j-Mm-5tQ"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="XDj-Mh-ldn" firstAttribute="top" secondItem="hJd-5j-a9E" secondAttribute="top" id="IET-te-pIL"/>
-                                                <constraint firstItem="hJd-5j-a9E" firstAttribute="leading" secondItem="rkb-Iu-aQd" secondAttribute="leading" constant="20" id="J07-Xz-7tz"/>
+                                                <constraint firstAttribute="bottom" secondItem="0PL-8V-yfx" secondAttribute="bottom" constant="10" id="ASU-Mc-cEM"/>
+                                                <constraint firstItem="XDj-Mh-ldn" firstAttribute="top" secondItem="DGH-jY-LHy" secondAttribute="top" id="E3b-qy-vTR"/>
+                                                <constraint firstItem="hJd-5j-a9E" firstAttribute="leading" secondItem="rkb-Iu-aQd" secondAttribute="leading" constant="40" id="J07-Xz-7tz"/>
                                                 <constraint firstItem="0PL-8V-yfx" firstAttribute="leading" secondItem="hJd-5j-a9E" secondAttribute="trailing" constant="10" id="K1p-pP-JPB"/>
                                                 <constraint firstItem="6H3-k0-uBX" firstAttribute="top" secondItem="U8i-j1-jKH" secondAttribute="bottom" constant="2" id="Tro-MG-CTI"/>
                                                 <constraint firstItem="DGH-jY-LHy" firstAttribute="leading" secondItem="rkb-Iu-aQd" secondAttribute="leading" id="Xui-dK-5oW"/>
+                                                <constraint firstAttribute="bottom" secondItem="hJd-5j-a9E" secondAttribute="bottom" constant="10" id="bLG-l7-PI5"/>
                                                 <constraint firstItem="XDj-Mh-ldn" firstAttribute="leading" secondItem="hJd-5j-a9E" secondAttribute="trailing" constant="10" id="buj-q9-ekm"/>
-                                                <constraint firstItem="0PL-8V-yfx" firstAttribute="bottom" secondItem="hJd-5j-a9E" secondAttribute="bottom" id="cGX-rZ-HD4"/>
                                                 <constraint firstItem="U8i-j1-jKH" firstAttribute="leading" secondItem="hJd-5j-a9E" secondAttribute="trailing" constant="10" id="dqQ-FT-UIe"/>
-                                                <constraint firstItem="DGH-jY-LHy" firstAttribute="top" secondItem="rkb-Iu-aQd" secondAttribute="top" id="lXw-gZ-acd"/>
+                                                <constraint firstItem="DGH-jY-LHy" firstAttribute="top" secondItem="rkb-Iu-aQd" secondAttribute="top" constant="10" id="lXw-gZ-acd"/>
                                                 <constraint firstAttribute="trailing" secondItem="XDj-Mh-ldn" secondAttribute="trailing" id="mxc-OM-8pH"/>
-                                                <constraint firstItem="hJd-5j-a9E" firstAttribute="top" secondItem="rkb-Iu-aQd" secondAttribute="top" constant="13" id="nKe-vm-GE7"/>
+                                                <constraint firstItem="hJd-5j-a9E" firstAttribute="top" secondItem="rkb-Iu-aQd" secondAttribute="top" constant="20" id="nKe-vm-GE7"/>
                                                 <constraint firstItem="6H3-k0-uBX" firstAttribute="leading" secondItem="hJd-5j-a9E" secondAttribute="trailing" constant="10" id="pp9-hM-Ikd"/>
+                                                <constraint firstAttribute="bottom" secondItem="DGH-jY-LHy" secondAttribute="bottom" constant="15" id="qb7-Wg-FFV"/>
                                                 <constraint firstItem="0PL-8V-yfx" firstAttribute="top" secondItem="6H3-k0-uBX" secondAttribute="bottom" constant="2" id="spO-nI-MSA"/>
                                             </constraints>
                                         </tableViewCellContentView>
